[project]
name = "mcp-server-template"
version = "0.1.0"
description = "Python MCP Server template"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Alpic" }]
keywords = ["mcp", "llm", "alpic", "python"]
dependencies = [
    "black>=25.1.0",
    "mcp",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "markdown>=3.5.0",
    "python-dotenv>=1.0.0",
    "duckduckgo-search>=4.0.0",
    "lxml>=4.9.0",
]
